Bug 59039 - FILEOPEN: type information of formula error results lost in cached results
Summary: FILEOPEN: type information of formula error results lost in cached results
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: All All
: high blocker
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.0.0.1 target:4.1.0
Keywords: regression
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-01-05 00:57 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2013-01-05 04:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2013-01-05 00:57:59 UTC
1. new spreadsheet doc
2. in A1 enter formula =1/0
   => result #DIV/0
3. save
4. reload
5. notice string in A1 #DIV/0 is now left justified
6. in A2 enter formula =ISERROR(A1)
   => result FALSE
   should be TRUE instead

Cause: error result after load is stored as svHybridCell in ScFormulaResult, so ScFormulaResult::GetType() mechanisms don't detect it.

Possible cure: let such cells be dirty and reinterpreted when needed.
Comment 1 Not Assigned 2013-01-05 03:14:52 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=235aaeb596c3701373889535f8fd8e29c92d333e&h=libreoffice-4-0

don't set formula cells with possible error val clean, fdo#59039


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Not Assigned 2013-01-05 03:15:09 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3cd31cd46f38e00d4fb31cf055b9bcbb5e94e5db

don't set formula cells with possible error val clean, fdo#59039



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Markus Mohrhard 2013-01-05 04:01:55 UTC
As discussed on IRC, we are now leaving formula cells, with a string that could also be an error value, dirty. This solves at least all problems I know around error values during cached value import.