don't set formula cells with possible error val clean, fdo#59039

Change-Id: Ide96d7f052ee4c8f56b33629ae48c6425a8ca19f